# organize

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  dprint.json  justfile
.cargo/: config.toml
.github/: renovate.json
.github/workflows/: audit.yml  breaking_changes.yml  check-and-lint.yaml  lint-markdown-toml.yaml  release.yaml  tests.yaml
assets/: Logos.afdesign
config/: config_template.yaml  empty.yaml  integration-tests.json  integration-tests.ron  integration-tests.yaml  links_desktop.yaml  organize.ron
crates/organize-rs_core/: CHANGELOG.md  Cargo.toml
crates/organize-rs_core/config/: config.ncl  config_template.yaml
crates/organize-rs_core/examples/: period_parser.rs  size_parser.rs  templating_parser.rs  yaml_parser.rs
crates/organize-rs_core/src/: actions.rs  actors.rs  aliases.rs  concurrency.rs  config.rs  error.rs  file_system.rs  filesystem.rs  filters.rs  lib.rs  locations.rs  parsers.rs  py_config.rs  rules.rs  runner.rs  ser_de.rs  state.rs  tags.rs  templating.rs
crates/organize-rs_core/src/actions/: conflicts.rs  impl_.rs  impl_traits.rs
crates/organize-rs_core/src/actors/: action_applicator.rs  filter_applicator.rs  location_walker.rs
crates/organize-rs_core/src/filters/: added.rs  all_items.rs  created.rs  duplicate.rs  empty.rs  exif.rs  extension.rs  file_content.rs  hash.rs  ignore_name.rs  ignore_path.rs  impl_.rs  impl_traits.rs  last_accessed.rs  last_modified.rs  mac_os_tags.rs  mimetype.rs  name.rs  no_filter.rs  regex.rs  size.rs  tests.rs
crates/organize-rs_core/src/parsers/: period_range.rs  size_range.rs  template.rs
crates/organize-rs_core/src/rules/: actions.rs  aliases.rs  de.rs  filters.rs  py_organize.rs  ser.rs  tags.rs
crates/organize-rs_core/tests/: public_api.rs
crates/organize-rs_core/tests/fixtures/filters/mimetype/: c.odt
crates/organize-rs_core/tests/fixtures/filters/size_based/: 300KiB
crates/organize-rs_core/tests/fixtures/public_api/: public-api_win.txt
crates/organize-rs_testing/: Cargo.toml
crates/organize-rs_testing/src/: lib.rs
docs/: DSL.md
docs/architecture/: Organize_Structure.excalidraw  architecture.md  architecture.plantuml
docs/design/: high_level_design.md  personas.md  problem_decomposition.md  requirements.md  ui_notes.md  use_cases.md  user_stories.md
examples/: parse_py_organize_config.rs
scripts/: test.rhai
src/: application.rs  commands.rs  config.rs  error.rs  lib.rs  prelude.rs  rules.rs  scripting.rs
src/commands/: action.rs  check.rs  completions.rs  config.rs  docs.rs  edit.rs  filter.rs  generate.rs  reveal.rs  rule.rs  run.rs  run_script.rs  schema.rs  sim.rs  start.rs
src/commands/generate/: gen_completions.rs  gen_config.rs
src/commands/old/: edit.rs  reveal.rs  run.rs
src/commands/run/: config.rs  script.rs
src/config/: organize_python.rs
src/rules/: actions.rs  aliases.rs  filters.rs
tests/: acceptance.rs  completions.rs
tests/fixtures/: config_schema.json
tests/fixtures/completions/: bash.txt  fish.txt  powershell.txt  zsh.txt
xtask/: Cargo.toml
xtask/src/tasks/: coverage.rs
