[package]
name = "organize"
description = "organize - a file management automation tool"
authors = ["the organize-rs authors"]
repository = "https://github.com/organize-rs/organize"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[features]
default = []
research_organize = []

[dependencies]
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
directories = "5.0.1"
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1.0.96"
thiserror = "1"
once_cell = "1"
duct = "0.13.6"
chrono = { version = "0.4.24", default-features = false, features = [
    "serde",
    "clock",
    "std",
    "time",
] }
regex = "1.8.1"
indicatif = "0.17.3"
walkdir = "2.3.3"
serde_yaml = "0.9.21"
toml = "0.7.3"

[dependencies.abscissa_core]
version = "0.7.0"
# optional: use `gimli` to capture backtraces
# see https://github.com/rust-lang/backtrace-rs/issues/189
# features = ["gimli-backtrace"]

[dev-dependencies]
abscissa_core = { version = "0.7.0", features = ["testing"] }
once_cell = "1.2"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level = 3
debug = true             # true for profiling
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = true             # true for profiling
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
