[workspace.package]
edition = "2021"
authors = ["the organize-rs authors"]
repository = "https://github.com/organize-rs/organize"
license = "AGPL-3.0-or-later"
categories = ["command-line-utilities"]
keywords = ["cli", "file-management", "automation"]
description = "organize - a file management automation tool"

[package]
name = "organize-rs"
version = "0.2.3"
edition.workspace = true
description.workspace = true
authors.workspace = true
documentation = "https://docs.rs/organize-rs"
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

[workspace]
members = ["crates/organize-rs_core", "crates/organize-rs_testing"]

[features]
default = []
research_organize = []

[workspace.dependencies]
organize-rs_core = { version = "0.1.1", path = "crates/organize-rs_core", features = [
    "cli",
] }
organize-rs_testing = { path = "crates/organize-rs_testing" }
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
directories = "5.0.1"
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1.0.96"
thiserror = "1"
once_cell = "1"
duct = "0.13.6"
chrono = { version = "0.4.24", default-features = false, features = [
    "serde",
    "clock",
    "std",
    "time",
] }
regex = "1.8.1"
indicatif = "0.17.3"
walkdir = "2.3.3"
serde_yaml = "0.9.21"
toml = "0.7.3"
abscissa_core = "0.7.0"
rhai = { version = "1.14.0", features = ["serde"] }
czkawka_core = "4.1.0"
itertools = "0.10.5"
displaydoc = "0.2.4"
clap_complete = "4.2.3"

# dev dependencies
tempfile = "3.5.0"
aho-corasick = "1.0.1"

[dependencies]
organize-rs_core.workspace = true
rhai.workspace = true
clap.workspace = true
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
once_cell.workspace = true
duct.workspace = true
chrono.workspace = true
regex.workspace = true
indicatif.workspace = true
walkdir.workspace = true
serde_yaml.workspace = true
toml.workspace = true
abscissa_core.workspace = true
itertools.workspace = true
clap_complete.workspace = true

[dev-dependencies]
abscissa_core = { workspace = true, features = ["testing"] }
once_cell.workspace = true
organize-rs_testing.workspace = true

[[bin]]
name = "organize"
path = "src/bin/organize.rs"
test = true
bench = true
doc = true
harness = true
edition = "2021"
#required-features = []  

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level = 3
debug = true             # true for profiling
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = true             # true for profiling
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
