[workspace.package]
edition = "2021"
authors = ["the organize-rs authors"]
repository = "https://github.com/organize-rs/organize"
license = "AGPL-3.0-or-later"
categories = ["command-line-utilities"]
keywords = ["cli", "file-management", "automation"]
description = "organize - a file management automation tool"

[package]
name = "organize-rs"
version = "0.3.0"
edition = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
documentation = "https://docs.rs/organize-rs"
repository = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[workspace]
members = ["crates/organize-rs_core", "crates/organize-rs_testing", "xtask"]

[features]
default = []
research_organize = []

[workspace.dependencies]
organize-rs_core = { version = "0.2.0", path = "crates/organize-rs_core", features = [
    "cli",
] }
organize-rs_testing = { path = "crates/organize-rs_testing" }
clap = { version = "4.3.0", features = ["derive", "env", "wrap_help"] }
directories = "5.0.1"
serde = { version = "1.0.163", features = ["serde_derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
anyhow = "1.0.71"
once_cell = "1.17.1"
duct = "0.13.6"
chrono = { version = "0.4.24", default-features = false, features = [
    "serde",
    "clock",
    "std",
    "time",
] }

walkdir = "2.3.3"
regex = "1.8.1"
serde_yaml = "0.9.21"
toml = "0.7.4"
abscissa_core = "0.7.0"
itertools = "0.10.5"
displaydoc = "0.2.4"
clap_complete = "4.3.0"
indicatif = "0.17.3"
rayon = "1.7.0"

# parsing
winnow = "0.4.6"
byte-unit = "4.0.19"

# dev dependencies
tempfile = "3.5.0"
aho-corasick = "1.0"

# infer file and MIME type by magic number
infer = "0.13"
mime = "0.3"

rstest = "0.17"
quickcheck = "1"
quickcheck_macros = "1"
pretty_assertions = "1"

# TODO: Needed Dependencies
# rhai = { version = "1.14.0", features = ["serde"] }
# czkawka_core = "4.1.0"
# + Lazy-regex?
# https://crates.io/crates/lazy-regex

# lookup tables for extensions/modes
# https://crates.io/crates/phf
# Hashing
# Read further: https://nnethercote.github.io/perf-book/hashing.html
# blake3 = { version = "1.3.3", features = ["digest", "rayon"] }

# Checksum
# https://crates.io/crates/crc32fast/1.3.2

# Embed assets
# https://crates.io/crates/rust-embed/6.6.1

# File size information in a human readable way
# humansize = { version = "2.1.3", features = ["impl_style"] }

# detection of a file's MIME type by its extension
# mime_guess = "2.0.4"

# read/search in pdf files
# pdf = "0.8.1"

# global state / thread local state
# state = { version = "0.5.3", features = ["tls"] }

# duplicates
# videos
# https://crates.io/crates/vid_dup_finder_lib/0.1.1
# images
# https://crates.io/crates/image_hasher/1.1.2
# RAW images
# https://crates.io/crates/rawloader/0.37.1


[dependencies]
organize-rs_core = { workspace = true }
clap = { workspace = true }
directories = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
duct = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
abscissa_core = { workspace = true }
itertools = { workspace = true }
clap_complete = { workspace = true }
indicatif = { workspace = true }
winnow = { workspace = true }

[dev-dependencies]
abscissa_core = { workspace = true, features = ["testing"] }
once_cell = { workspace = true }
organize-rs_testing = { workspace = true }

[[bin]]
name = "organize"
path = "src/bin/organize.rs"
test = true
bench = true
doc = true
harness = true
edition = "2021"
#required-features = []  

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level = 3
debug = true             # true for profiling
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = true             # true for profiling
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
