[package]
name = "organize-rs_core"
version = "0.2.3"
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
include = ["src/**/*", "LICENSE", "CHANGELOG.md", "config/config_template.yaml"]
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = { workspace = true }

# [[example]]
# name = "templating_parser"
# path = "examples/templating_parser.rs"
# test = true
# bench = true
# doc = true
# harness = true
# edition = "2021"

[features]
default = []
cli = ["dep:clap", "dep:indicatif"]

[dependencies]
# czkawka_core = { workspace = true }
aho-corasick = { workspace = true }
byte-unit = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, optional = true }
console = { workspace = true }
crossbeam = { workspace = true }
directories = { workspace = true }
displaydoc = { workspace = true }
duct = { workspace = true }
filetime = { workspace = true }
indicatif = { workspace = true, optional = true }
infer = { workspace = true }
itertools = { workspace = true }
jwalk = { workspace = true }
mime = { workspace = true }
once_cell = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
ron = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
trash = { workspace = true }
winnow = { workspace = true }

[dev-dependencies]
expect-test = "1.4.1"
insta = { workspace = true }
organize-rs_testing = { workspace = true }
pretty_assertions = { workspace = true }
public-api = "0.31.0"
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
rstest = { workspace = true }
rustdoc-json = "0.8.6"
rustup-toolchain = "0.1.5"
