[package]
publish = false
name = "organize-rs_testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = { workspace = true }
aho-corasick = { workspace = true }
jwalk = { workspace = true }
