[package]
name = "organize-rs_testing"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = { workspace = true }
jwalk = { workspace = true }
tempfile = { workspace = true }
